#
# Cargo.toml
#

[package]

name = "meadows"
version = "0.1.3"

authors = ["Philip Köster"]
description = "An experimental library written in Rust"
default-run = "meadows-bare"
documentation = "https://docs.rs/meadows"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/phkoester/meadows"
rust-version = "1.78"

exclude = [
  "/.github",
  "/.gitignore",
  "/.vscode",
  "/Makefile",
  "/meadows.code-workspace",
  "/project.json",
  "/rustfmt.toml"
]

[dependencies]

anyhow = "1.0"
dirs = "5.0"
dunce = "1.0"
nu-ansi-term = "0.50"
thiserror = "2.0"
tracing = "0.1"
tracing-config = { version = "0.1", optional = true }

[dev-dependencies]

log = "0.4"
meadows = { path = ".", features = ["tracing_config"] }
tracing-log = "0.2"

[features]

default = ["std"]
std = []
tracing_config = ["dep:tracing-config"]

[lints.clippy]

pedantic = { level = "warn", priority = -1 }

enum-glob-use = "allow"
if_not_else = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"

[lints.rust]

missing_docs = "warn"

# EOF
