#
# Cargo.toml
#

[package]

name = "meadows"
version = "0.1.3"

authors = ["Philip Köster"]
description = "An experimental library written in Rust"
default-run = "meadows-std"
documentation = "https://docs.rs/meadows"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/phkoester/meadows"
rust-version = "1.78"

exclude = [
  "/.github",
  "/.gitignore",
  "/.vscode",
  "/Makefile",
  "/meadows.code-workspace",
  "/project.json",
  "/rustfmt.toml"
]

# -----------------------------------------------------------------------------------------------------------

[dependencies]

anstream = "0.6"
anyhow = "1.0"
dirs = "5.0"
dunce = "1.0"
# enum-display
owo-colors = "4.1"
regex = "1.11"
# sysinfo
thiserror = "2.0"
tracing = "0.1"
tracing-config = { version = "0.1", optional = true }

[dev-dependencies]

clap = { version = "4.5", features = ["derive"] }
log = "0.4"
meadows = { path = ".", features = ["tracing_config"] }
tracing-log = "0.2"

[features]

tracing_config = ["dep:tracing-config"]

[lints.clippy]

pedantic = { level = "warn", priority = -1 }

enum_glob_use = "allow"
if_not_else = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"

[lints.rust]

missing_docs = "warn"

[package.metadata.docs.rs]

features = ["tracing_config"]

[profile.release]

codegen-units = 1 # Allows LLVM to perform better optimization
lto = true # Enables link-time-optimizations
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed
panic = "abort" # Higher performance by disabling panic handlers
strip = true # Ensures debug symbols are removed

# EOF
