#
# Cargo.toml
#

[package]

name = "meadows"
version = "0.1.5"

authors = ["Philip Köster"]
description = "An experimental library written in Rust"
default-run = "meadows-std"
documentation = "https://docs.rs/meadows"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/phkoester/meadows"
rust-version = "1.91.1"

exclude = [
  "/.github",
  "/.gitignore",
  "/.vscode",
  "/Cargo.lock",
  "/Makefile",
  "/gaia-project.json",
  "/meadows.code-workspace",
  "/rustfmt.toml"
]

# -----------------------------------------------------------------------------------------------------------

[dependencies]

anstream = "0.6"
anyhow = "1"
dirs = "6"
dunce = "1"
# enum-display
owo-colors = "4"
regex = "1"
# sysinfo
thiserror = "2"
tracing = "0.1"
tracing-config = { version = "0.1", optional = true }

[dev-dependencies]

clap = { version = "4", features = ["derive"] }
log = "0.4"
meadows = { path = ".", features = ["tracing_config"] }
tracing-log = "0.2"

[features]

tracing_config = ["dep:tracing-config"]

[lints.clippy]

pedantic = { level = "warn", priority = -1 }

enum_glob_use = "allow"
if_not_else = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unnecessary_debug_formatting = "allow"

[lints.rust]

missing_docs = "warn"

[package.metadata.docs.rs]

all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "src/katex.html"]

[profile.release]

codegen-units = 1 # Allows LLVM to perform better optimization
lto = true # Enables link-time-optimizations
opt-level = 3 # `s`: Prioritize small binary size. `3`: Prioritize speed
panic = "abort" # Higher performance by disabling panic handlers
strip = true # Ensures debug symbols are removed

# EOF
